# DrystoneEngine

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
demos/geometry_game/: CMakeLists.txt
demos/geometry_game/src/: PlaneHandler.cpp  PlaneHandler.h  input.cpp  input.h  main.cpp
demos/rgb_game/: CMakeLists.txt  README.md
demos/rgb_game/html/: generate_html.bat
demos/rgb_game/src/: input.cpp  input.h  main.cpp
engine_src/: CMakeLists.txt  GameEngine.cpp  GameEngine.h
engine_src/components/: Collider.cpp  Collider.h  ComponentManager.cpp  ComponentManager.h  EventHandler.cpp  EventHandler.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
engine_src/components/camera/: Camera.cpp  Camera.h  CameraCommand.cpp  CameraCommand.h  CameraFactory.cpp  CameraFactory.h  CameraHandler.cpp  CameraHandler.h
engine_src/components/geometries/: Plane.cpp  Plane.h
engine_src/components/geometries/inc/: Mesh.h
engine_src/core/: Camera.h  Game.cpp  Game.h  GameController.cpp  GameController.h  GameEngine.cpp  GameEngine.h  GameRenderer.cpp  GameRenderer.h  Log.h  RandomGenerator.cpp
engine_src/core/camera/: Camera.cpp  Camera.h  Camera3D.cpp  Camera3D.h  CameraFactory.cpp  CameraFactory.h  CameraHandler.cpp  CameraHandler.h
engine_src/core/inc/: Globals.h  Log.h  sdl_deleter.h
engine_src/core/util/: RandomGenerator.cpp  UuidGenerator.cpp  UuidGenerator.h
engine_src/datastructures/: Vector.cpp
engine_src/datastructures/geometries/: Plane.cpp  Plane.h
engine_src/datastructures/geometries/inc/: Mesh.h
engine_src/input/: InputCommands.cpp  InputCommands.h  InputHandler.cpp  InputHandler.h
engine_src/input/inc/: InputCommand.h
engine_src/linalg/: Constants.h  Mat2.cpp  Mat2.h  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  Vector.cpp  Vector.h  linalg.h
engine_src/opengl/glsl/: geometryrendering.frag  geometryrendering.vert
engine_src/opengl/shader/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
engine_src/world/: GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h
ext/: README.md
ext/SDL2/SDL2_image-2.0.2/: sdl2_image-config.cmake
ext/SDL2/SDL2_ttf-2.0.14/: sdl2_ttf-config.cmake
html/: generate_html.bat  index.html.mem  index.js
include/: main.cpp  main_js.cpp
include/core/inc/: Game.h  GameController.h  GameEngine.h  GameRenderer.h  Globals.h  InputHandler.h  RandomGenerator.h
include/core/src/: Game.cpp  GameController.cpp  GameEngine.cpp  GameRenderer.cpp  InputHandler.cpp  RandomGenerator.cpp
include/datastructures/inc/: Vector.h
include/datastructures/src/: Vector.cpp
include/input/inc/: InputCommands.h  InputConstants.h  InputHandler.h
include/input/src/: InputCommands.cpp  InputHandler.cpp
include/world/inc/: Camera.h  Player.h
include/world/src/: Camera.cpp  GameObject.cpp  Player.cpp
test/: README.md
